Closed Bug 14072 Opened 25 years ago Closed 25 years ago

Sending a message when the smpt pref is empty crash Apprunner

Categories

(MailNews Core :: Composition, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: mscott)

References

Details

If I try to send a message when my smtp pref is set to an empty string result in a crash of Apprunner.
Status: NEW → ASSIGNED
Target Milestone: M11
Jean-Francois, can you post a stack trace for me? Thanks!
In addition to a stack trace, exactly which smtp pref needs to be empty?
identity.id1.smtp_server? or identity.id1.smtp_name, etc..

Thanks.
you need to clear identity.id1.smtp_server.
Just before crashing, I get the following assert message:

 PreCondition: "You can't dereference a NULL nsCOMPtr with operator->()." (mRawPtr != 0) at file nsCOMPtr.h, line
588

at this point (befor the crash) the stack trace is the following:

...
  04787870    PPC  16E4DDAC  nsMsgComposeAndSend::DeliverFileAsMail()+00740
  04787750    PPC  16E59E7C  nsSmtpService::SendMailMessage(nsIFileSpec*, const char*, nsIUrlListener*,
nsISmtpServer*, nsIURI**)+0021C
  04787690    PPC  16E5A3B0  NS_MsgLoadMailtoUrl(nsIURI*, nsISupports*)+000E0
  04787630    PPC  16E58C70  nsSmtpProtocol::LoadUrl(nsIURI*, nsISupports*)+003D0
  04787580    PPC  16E82160  nsMsgProtocol::LoadUrl(nsIURI*, nsISupports*)+0014C
  04787500    PPC  1757DF80  nsDebug::PreCondition(const char*, const char*, const char*, int)+00040

and then we crash right after. I will give you the line numer soon...
the assert/crash occurs in nsMsgProtocol::LoadUrl(nsIURI * aURL, nsISupports * aConsumer) at the line 219, I think
during the conversion of the parameters:

			m_channel->AsyncRead(m_startPosition, m_readCount, aURL,this /* stream observer */);
Whiteboard: Fix in my tree..will land Monday
I have a fix for this in my tree which I'll land monday. I added a new string to
the string bundle and was forced to revamp the compose string bundle code to
actually make it work!

I'm leaving soon and don't want to check in when I can't watch the tree.

No need to triage this bug on Monday as I have a fix.
Great, if you want, I can watch the tree for you... and eventually fix any bustage. Let me know...
Blocks: 11091
(target milestone is M11 or M12 - add to mail beta tracking bug)
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: Fix in my tree..will land Monday
I've checked in a fix for this problem. To test, edit your prefs.js by hand and
where your smtp server name is, make that an empty string:
user_pref("mail.smtpserver.smtp1.hostname", "");

Try to send yourself a message. You'll get an alert asking you to properly
configure your smtp server and we don't crash.

However, while fixing this bug I noticed Bug #14561. The compose window is going
away and not coming back even though I'm reporting this error about a bad host
name. It used to be that the compose window would come back if you told it the
smtp code failed. So that part is now tracked in 14561.
QA Contact: lchiang → esther
Status: RESOLVED → VERIFIED
Using 19991003m10 on win98 and 19991001M10 on linux and mac this prompts with a
message if the smtp hostname is empty.  Bug scott found still happens. This one
will be verified
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.