Bug #14072 --> throw up a dialog if the user tries to send a message without providing a host name (i.e. they haven't set up there prefs right)